--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="/main.css">
-	<link href="//cdn.xf8.co/fonts/VCR-OSD-MONO/stylesheet.css" rel="stylesheet">
-	<link href="//cdn.xf8.co/fonts/Highway-Gothic/stylesheet.css" rel="stylesheet">
+	<link href="/fonts/VCR-OSD-MONO/stylesheet.css" rel="stylesheet">
+	<link href="/fonts/Highway-Gothic/stylesheet.css" rel="stylesheet">
 
-	<script type="text/javascript" src="//cdn.xf8.co/bs/md/4.5.9-Free/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/granim/1.1.1/granim.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/ScrollMagic.min.js"></script>
