--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<table>
 					<tr>
 						<td><div class="left"><a href="//mjexe.deviantart.com/">Art</a></div></td>
-						<td><div class="center"><a href="//gumroad.com/mjex">Gumroad</a></div></td>
+						<td><div class="center"><a href="//hyperve.rs/">hyperverse</a></div></td>
 						<td><div class="right"><a href="//mjex.bandcamp.com/">Music</a></div></td>
 					</tr>
 				</table>
