--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 			<div class="links">
 				<table>
 					<tr>
-						<td><div class="left"><a href="//mjexe.deviantart.com/">Art</a></div></td>
+						<td><div class="left"><a href="//mjexe.deviantart.com/">art</a></div></td>
 						<td><div class="center"><a href="//hyperve.rs/">hyperverse</a></div></td>
-						<td><div class="right"><a href="//mjex.bandcamp.com/">Music</a></div></td>
+						<td><div class="right"><a href="//mjex.bandcamp.com/">music</a></div></td>
 					</tr>
 				</table>
 			</div>
