--- a/index.html
+++ b/index.html
@@ -5,130 +5,27 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#0000dd">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>mjex</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" href="/main.css">
-	<link href="/fonts/VCR-OSD-MONO/stylesheet.css" rel="stylesheet">
-	<link href="/fonts/Highway-Gothic/stylesheet.css" rel="stylesheet">
-
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/granim/1.1.1/granim.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/ScrollMagic.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjs/5.2.0/math.min.js"></script>
+	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="crt.css">
+	<link href="fonts/VCR-OSD-MONO/stylesheet.css" rel="stylesheet">
+	<link href="fonts/Highway-Gothic/stylesheet.css" rel="stylesheet">
 </head>
 
 <body>
-	<div id="logo-container" class="unselectable">
-		<canvas class="gradient-bg"></canvas>
-		<div id="logo"></div>
-		<div id="p5_loading"></div>
-
-		<div id="overlay" class="hidden">
-			<div class="fake-canvas"></div>
-
-			<div class="links">
-				<table>
-					<tr>
-						<td><div class="left"><a href="//mjexe.deviantart.com/">art</a></div></td>
-						<td><div class="center"><a href="//hyperve.rs/">hyperverse</a></div></td>
-						<td><div class="right"><a href="//mjex.bandcamp.com/">music</a></div></td>
-					</tr>
-				</table>
-			</div>
-		</div>
-	</div>
-
-	<div id="button-thing" class="hidden unselectable">
-		<div class="content">
-			<a href="javascript:void(0);"><span class="text">show more</span></a>
-		</div>
-	</div>
-
-	<div id="about-container">
-		<div class="header">
-			About
-		</div>
-
-		<div class="content">
-			I make stuff. Zoom in if the animation is slow.
-		</div>
-	</div>
+	<div id="container" class="display crt"></div>
+	<!-- third party scripts -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/three@0.107.0/build/three.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/postprocessing@6.5.1/build/postprocessing.min.js"></script>
+	<script src="scripts/glfx.js"></script>
+	<!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjs/5.2.0/math.min.js"></script> -->
 	
-
-	<script>
-		var granimInstance = new Granim({
-			element: '#logo-container .gradient-bg',
-			name: 'basic-gradient',
-			direction: 'top-bottom', // 'diagonal', 'top-bottom', 'radial'
-			opacity: [1, 1],
-			isPausedWhenNotInView: true,
-			states : {
-				"default-state": {
-					gradients: [
-						['#0000dd', '#000080'],
-						['#00af92', '#00583b']
-					],
-					
-					transitionSpeed: 12000
-				}
-			}
-		});
-
-		// ScrollMagic stuff
-		let controller = new ScrollMagic.Controller();
-
-		let scene = new ScrollMagic.Scene({
-			offset: '100vh',
-			duration: 100
-		});
-
-		controller.addScene({
-			scene
-		})
-
-
-		// Other stuff
-
-
-		let metaThemeColor = document.querySelector('meta[name=theme-color]');
-
-		function animateThemeColor() {
-			let metaThemeColor = document.querySelector('meta[name=theme-color]');
-			metaThemeColor.setAttribute('content', getGradientColor());
-
-			setTimeout(function() {
-				animateThemeColor();
-			}, 500);
-		}
-
-
-		$(function() {
-			$([document.documentElement, document.body]).animate({
-				scrollTop: 0
-			}, 0);
-
-			$('#button-thing .content').click(function() {
-				if($('#button-thing .text')[0].textContent == 'show more') {
-					$('#button-thing .text')[0].textContent = 'hide';
-					scrollDude($("#about-container").outerHeight());
-				} else {
-					$('#button-thing .text')[0].innerHTML = 'show more';
-					scrollDude(0);
-				}
-			});
-		})
-
-		function scrollDude(argument) {
-			$([document.documentElement, document.body]).animate({
-				scrollTop: argument
-			}, 250);
-		}
-	</script>
-
-	<script src="/scripts/main.js"></script>
+	<!-- my scripts -->
+	<script type="text/javascript" src="scripts/chargrid.js"></script>
+	<script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
