--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/three@0.107.0/build/three.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/postprocessing@6.5.1/build/postprocessing.min.js"></script>
 	<script src="scripts/glfx.js"></script>
+	<script src="scripts/mousetrap.min.js"></script>
 	<!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjs/5.2.0/math.min.js"></script> -->
 	
 	<!-- my scripts -->
