--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="crt.css">
 	<link rel="stylesheet" href="main.css">
-	<!-- <link href="fonts/VCR-OSD-MONO/stylesheet.css" rel="stylesheet"> -->
+	<link href="fonts/VCR-OSD-MONO/stylesheet.css" rel="stylesheet">
 </head>
 
 <body>
