--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="theme-color" content="#0000dd">
+	<meta name="theme-color" content="#000000">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>mjex</title>
 
