--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <body>
 	<div id="container" class="display crt"></div>
+	
+	<a href="javascript:location.reload(true)" style="position: absolute; z-index: 10">big chungus</a>
 	<!-- third party scripts -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
