--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
 	<link rel="stylesheet" href="crt.css">
 	<link rel="stylesheet" href="main.css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-	<script>
-		WebFont.load({
-			custom: {
-				families: ['VCR OSD Mono'],
-				urls: ['fonts/VCR-OSD-MONO/stylesheet.css']
-			}});
-	</script>
+
 </head>
 
 <body>
@@ -40,6 +33,17 @@
 	<!-- my scripts -->
 	<script type="text/javascript" src="scripts/webgl-display.js"></script>
 	<script type="text/javascript" src="scripts/webgl-main.js"></script>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	<script>
+		WebFontConfig = {active: fontloaded()};
+		WebFont.load({
+			custom: {
+				families: ['VCR OSD Mono'],
+				urls: ['fonts/VCR-OSD-MONO/stylesheet.css']
+			}
+		});
+	</script>
 
 	<!-- <script type="text/javascript" src="scripts/html-disp-load.js"></script> -->
 </body>
