--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	<!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjs/5.2.0/math.min.js"></script> -->
 	
 	<!-- my scripts -->
-	<script type="text/javascript" src="scripts/webgl-display.js"></script>
-	<script type="text/javascript" src="scripts/webgl-main.js"></script>
+	<script type="text/javascript" src="scripts/display.js"></script>
+	<script type="text/javascript" src="scripts/main.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script>
