--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="crt.css">
 	<link rel="stylesheet" href="main.css">
 
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script>
 		// WebFontConfig = {active: fontloaded()};
 		WebFont.load({
@@ -30,7 +30,7 @@
 				urls: ['fonts/VCR-OSD-MONO/stylesheet.css']
 			}
 		});
-	</script> -->
+	</script>
 
 	<script type="text/javascript" src="scripts/pixi.min.js"></script>
 	<script type="text/javascript" src="scripts/pixi-filters.js"></script>
