--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	</script>
 
 	<script type="text/javascript" src="scripts/pixi.min.js"></script>
+	<script type="text/javascript" src="scripts/pixi-legacy.min.js"></script>
 	<script type="text/javascript" src="scripts/pixi-filters.js"></script>
 </head>
 
