--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 <body>
 	<!-- third party scripts -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script> -->
-
 	<script type="text/javascript" src="scripts/mousetrap.min.js"></script>
-
+	<script type="text/javascript" src="scripts/hammer.min.js"></script>
+	
+	<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/three@0.107.0/build/three.min.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/postprocessing@6.5.1/build/postprocessing.min.js"></script> -->
 	<!-- <script src="scripts/glfx.js"></script> -->
