--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<!-- third party scripts -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/mousetrap.min.js"></script>
+	<script type="text/javascript" src="scripts/zingtouch.min.js"></script>
 	<script type="text/javascript" src="scripts/hammer.min.js"></script>
 	
 	<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script> -->
