--- a/examples/radialmenu/index.html
+++ b/examples/radialmenu/index.html
@@ -18,6 +18,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.6/chroma.min.js" integrity="sha256-EPpkhj7mJAHBUK2SGtSujMVYEi7Q8kIudhB895gTynI=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src='/scripts/angles.js'></script>
 	<script src='std.js'></script>
 	<script src='panel.js'></script>
 	<script src='main.js'></script>
