--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -7,25 +7,59 @@
 
 	<title>TV Heads</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Oswald:500&display=swap" rel="stylesheet">
 	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-	<script src='main.js'></script>
 </head>
 <body>
-	<div class="container">
-		<div class="tv-list">
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
-			<div class="item"></div>
+	<div class="giga-container">
+		<div class="titlebar">
+			<div class="left"></div>
+			<div class="spacer"></div>
+			<div class="title">TV HEAD MFG CO</div>
+			<div class="right"></div>
+		</div>
+
+		<div class="outer">
+			<div class="menu">
+				<div class="top"></div>
+	
+				<ul class="buttons">
+					<li>mike</li>
+					<li>who</li>
+					<li>cheese</li>
+					<li>hairy</li>
+				</ul>
+				
+				<div class="spacer"></div>
+				<div class="bottom"></div>
+			</div>
+	
+			<div class="container">
+				<div class="header">
+					<div class="transition"></div>
+					<div class="left"></div>
+					<div class="title">SELECTION</div>
+					<div class="right"></div>
+				</div>
+		
+				<div class="list-container"></div>
+		
+				<div class="footer">
+					<div class="transition"></div>
+					<div class="left"></div>
+					<div class="title">© 2019</div>
+					<div class="right"></div>
+				</div>
+			</div>
 		</div>
 	</div>
+
+
+	<!-- scripts -->
+	<script type="text/javascript" src="assets/jquery.min.js"></script>
+	
+	<!-- my scripts -->
+	<script type="text/javascript" src="assets/tv-item.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
