--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 
-	<title>TV Heads</title>
+	<title>TV HEAD MANUFACTURING</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Oswald:500&display=swap" rel="stylesheet">
 	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
@@ -15,7 +15,7 @@
 		<div class="titlebar">
 			<div class="left"></div>
 			<div class="spacer"></div>
-			<div class="title">TV HEAD MFG CO</div>
+			<div class="title">TV HEAD MFG</div>
 			<div class="right"></div>
 		</div>
 
@@ -24,10 +24,9 @@
 				<div class="top"></div>
 	
 				<ul class="buttons">
-					<li>mike</li>
-					<li>who</li>
-					<li>cheese</li>
-					<li>hairy</li>
+					<li>HOMEPAGE</li>
+					<li>ETSY LISTING</li>
+					<li>REFRESH SESSION</li>
 				</ul>
 				
 				<div class="spacer"></div>
@@ -42,7 +41,17 @@
 					<div class="right"></div>
 				</div>
 		
-				<div class="list-container"></div>
+				<div class="list-container">
+					<div class="detail-view">
+						<div class="header">
+							<div class="left"></div>
+							<div class="title">HAHA</div>
+							<div class="spacer"></div>
+							<div class="transition"></div>
+							<div class="right"></div>
+						</div>
+					</div>
+				</div>
 		
 				<div class="footer">
 					<div class="transition"></div>
