--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -15,7 +15,7 @@
 		<div class="titlebar">
 			<div class="left"></div>
 			<div class="spacer"></div>
-			<div class="title">TV HEAD MFG</div>
+			<div class="title">TV HEAD STOCK</div>
 			<div class="right"></div>
 		</div>
 
@@ -30,6 +30,7 @@
 				</ul>
 				
 				<div class="spacer"></div>
+				<div class="spacer"></div>
 				<div class="bottom"></div>
 			</div>
 	
@@ -41,17 +42,7 @@
 					<div class="right"></div>
 				</div>
 		
-				<div class="list-container">
-					<div class="detail-view">
-						<div class="header">
-							<div class="left"></div>
-							<div class="title">HAHA</div>
-							<div class="spacer"></div>
-							<div class="transition"></div>
-							<div class="right"></div>
-						</div>
-					</div>
-				</div>
+				<div class="list-container"></div>
 		
 				<div class="footer">
 					<div class="transition"></div>
