--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -30,7 +30,7 @@
 				</ul>
 				
 				<div class="spacer"></div>
-				<div class="spacer"></div>
+				<div class="spacer" id="returnbutton"></div>
 				<div class="bottom"></div>
 			</div>
 	
@@ -57,6 +57,7 @@
 
 	<!-- scripts -->
 	<script type="text/javascript" src="assets/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/clipboard.min.js"></script>
 	
 	<!-- my scripts -->
 	<script type="text/javascript" src="assets/tv-item.js"></script>
