--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -36,16 +36,16 @@
 	
 			<div class="container">
 				<div class="header">
-					<div class="transition"></div>
+					<div class="transition"><div class="corner"></div></div>
 					<div class="left"></div>
 					<div class="title">SELECTION</div>
 					<div class="right"></div>
 				</div>
-		
+				
 				<div class="list-container"></div>
-		
+				
 				<div class="footer">
-					<div class="transition"></div>
+					<div class="transition"><div class="corner"></div></div>
 					<div class="left"></div>
 					<div class="title">© 2019</div>
 					<div class="right"></div>
