--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -15,7 +15,7 @@
 		<div class="titlebar">
 			<div class="left"></div>
 			<div class="spacer"></div>
-			<div class="title">TV HEAD STOCK</div>
+			<div class="title">MY PP HARD</div>
 			<div class="right"></div>
 		</div>
 
@@ -25,7 +25,7 @@
 	
 				<ul class="buttons">
 					<li>HOMEPAGE</li>
-					<li>ETSY LISTING</li>
+					<li>LIGMA DOWNLOAD</li>
 					<li>REFRESH SESSION</li>
 				</ul>
 				
