--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -15,7 +15,7 @@
 		<div class="titlebar">
 			<div class="left"></div>
 			<div class="spacer"></div>
-			<div class="title">MY PP HARD</div>
+			<div class="title">TV HEAD DESIGNS</div>
 			<div class="right"></div>
 		</div>
 
