--- a/apps/tvconsole/index.html
+++ b/apps/tvconsole/index.html
@@ -21,6 +21,7 @@
 
 	<!-- my scripts -->
 	<script type="text/javascript" src="assets/tv-item.js"></script>
+	<script type="text/javascript" src="assets/confirm.js"></script>
 	<script type="text/javascript" src="tv-container.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
