--- a/apps/tvs/index.html
+++ b/apps/tvs/index.html
@@ -33,7 +33,7 @@
 	
 				<ul class="buttons">
 					<a href="/"><li>HOMEPAGE</li></a>
-					<a href=""><li>ETSY LISTING</li></a>
+					<a href="https://www.etsy.com/listing/745658601/custom-object-tv-head-cosplay"><li>ETSY LISTING</li></a>
 					<!-- <a href="/"><li>ABOUT</li></a> -->
 				</ul>
 				
