--- a/examples/event1/index.html
+++ b/examples/event1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- font import -->
-	<link href="https://fonts.googleapis.com/css?family=Heebo:300,700,900|Oswald:400,700|Teko:300,700&display=swap" rel="stylesheet" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Heebo:300,700,900|Oswald:400,700|Teko:300,700|Ultra&display=swap" rel="stylesheet" rel="stylesheet">
 
 	<!-- metadata -->
 	<meta charset="UTF-8">
@@ -23,7 +23,7 @@
 				<div class="spacer"></div>
 
 				<ul class="links">
-					<li class="active"><a href="#1">Home<br><img></a></li>
+					<li class="active"><a href="#">Home<br><img></a></li>
 					<li><a href="#lineup">Lineup<br><img></a></li>
 					<li><a href="#tickets">Tickets<br><img></a></li>
 					<li><a href="#sponsors">Sponsors<br><img></a></li>
@@ -64,6 +64,14 @@
 		<div class="tickets" id="tickets">
 			<div class="top">Tickets</div>
 			<div class="button" style="cursor: pointer">Buy Tickets 🡢</div>
+		</div>
+
+		<div class="sponsors" id="sponsors">
+			<div class="top">SPONSORSHIPS GO HERE</div>
+		</div>
+
+		<div class="about" id="about">
+			<div class="top">©2020 mjexart design</div>
 		</div>
 	</div>
 
