--- a/examples/event1/index.html
+++ b/examples/event1/index.html
@@ -27,7 +27,7 @@
 					<li><a href="#lineup">Lineup<br><img></a></li>
 					<li><a href="#tickets">Tickets<br><img></a></li>
 					<li><a href="#sponsors">Sponsors<br><img></a></li>
-					<li><a href="#info">Info<br><img></a></li>
+					<li><a href="#about">About<br><img></a></li>
 				</ul>
 			</div>
 		</div>
