--- a/apps/discord/index.html
+++ b/apps/discord/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>haha</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src='main.js'></script>
+	<script src="main.js"e></script>
 </head>
 <body>
 	haha
