--- a/apps/discord/index.html
+++ b/apps/discord/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>haha</title>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="main.js"e></script>
+	<script src="jquery-3.4.1.js"></script>
+	<script src="main.js"></script>
 </head>
 <body>
 	haha
