--- a/examples/irishfest/index.html
+++ b/examples/irishfest/index.html
@@ -18,8 +18,27 @@
 <body>
 	<div id="fullpage">
 		<div class="section video">
+			<div class="header">
+				<div class="nav">
+					<div class="logo">OSHKOSH</div>
+	
+					<div class="spacer"></div>
+	
+					<ul class="links">
+						<li class="active"><a href="#">Home<br><img></a></li>
+						<li><a href="#lineup">Lineup<br><img></a></li>
+						<li><a href="#tickets">Tickets<br><img></a></li>
+						<li><a href="#sponsors">Sponsors<br><img></a></li>
+						<li><a href="#about">About<br><img></a></li>
+					</ul>
+				</div>
+			</div>
+	
 			<div class="video-overlay">
-				<div class="main-text">SOMETIME <span>??-??, 2020</span></div>
+				<div class="main-text">
+					<span class="month">SOMETIME</span>
+					<span class="date">??-??, 2020</span>
+				</div>
 			</div>
 
 			<video data-keepplaying autoplay muted loop>
@@ -27,8 +46,23 @@
 			</video>
 		</div>
 
-		<div class="section">Some section</div>
-		<div class="section">Some section</div>
+		<div class="section lineup">
+			LINEUP SECTION
+
+			<!-- <div class="container">
+				<div class="box1">LINEUP</div>
+
+				<div class="box2">
+					<ul>
+						<li>GAELIC STORM</li>
+					</ul>
+				</div>
+			</div> -->
+		</div>
+
+		<div class="section">TICKETS SECTION</div>
+		<div class="section">SPONSORS SECTION</div>
+		<div class="section">ABOUT SECTION</div>
 	</div>
 
 
