--- a/examples/irishfest/index.html
+++ b/examples/irishfest/index.html
@@ -20,7 +20,7 @@
 		<div class="section video">
 			<div class="header">
 				<div class="nav">
-					<div class="logo">OSHKOSH</div>
+					<div class="logo">IRISH FEST</div>
 	
 					<div class="spacer"></div>
 	
