--- a/examples/irishfest/v3/index.html
+++ b/examples/irishfest/v3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- font import -->
-	<link href="https://fonts.googleapis.com/css?family=Heebo:300,700,900|Comfortaa:300,700|Teko:300,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Comfortaa:300,700|Teko:300,700&display=swap" rel="stylesheet">
 
 	<!-- metadata -->
 	<meta charset="UTF-8">
@@ -64,11 +64,58 @@
 	
 					<div class="band-container">
 						<div class="bands">
-							<div class="item">
-								<img class="image" height="64" src="assets/images/gaelicstorm.jpg">
-								<div class="title">GAELIC STORM</div>
-								<div class="description">main stage</div>
+
+							<div class="stage-section-container">
+								<div class="header">Stage 1 presented by Some Company</div>
+								<div class="stage-section">
+
+									<div class="item">
+										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
+										<div class="title">Gaelic Storm</div>
+										<div class="description">@ 69:420 presented by whoever</div>
+									</div>
+
+									<div class="item">
+										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
+										<div class="title">Gaelic Storm</div>
+										<div class="description">@ 69:420 presented by whoever</div>
+									</div>
+
+									<div class="item">
+										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
+										<div class="title">Gaelic Storm</div>
+										<div class="description">@ 69:420 presented by whoever</div>
+									</div>
+
+								</div>
 							</div>
+
+
+							<div class="stage-section-container">
+								<div class="header">Stage 2 presented by The Country of Georgia</div>
+								<div class="stage-section">
+
+									<div class="item">
+										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
+										<div class="title">Gaelic Storm</div>
+										<div class="description">@ 69:420 presented by whoever</div>
+									</div>
+
+									<div class="item">
+										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
+										<div class="title">Gaelic Storm</div>
+										<div class="description">@ 69:420 presented by whoever</div>
+									</div>
+
+									<div class="item">
+										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
+										<div class="title">Gaelic Storm</div>
+										<div class="description">@ 69:420 presented by whoever</div>
+									</div>
+
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
