--- a/examples/irishfest/v3/index.html
+++ b/examples/irishfest/v3/index.html
@@ -54,72 +54,7 @@
 
 
 		<div class="section lineup">
-			<div class="container">
-				<div class="sponsors">
-					sponsorships
-				</div>
-
-				<div class="lineup-container">
-					<div class="header">LINEUP</div>
-	
-					<div class="band-container">
-						<div class="bands">
-
-							<div class="stage-section-container">
-								<div class="header">Stage 1 presented by Some Company</div>
-								<div class="stage-section">
-
-									<div class="item">
-										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
-										<div class="title">Gaelic Storm</div>
-										<div class="description">@ 69:420 presented by whoever</div>
-									</div>
-
-									<div class="item">
-										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
-										<div class="title">Gaelic Storm</div>
-										<div class="description">@ 69:420 presented by whoever</div>
-									</div>
-
-									<div class="item">
-										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
-										<div class="title">Gaelic Storm</div>
-										<div class="description">@ 69:420 presented by whoever</div>
-									</div>
-
-								</div>
-							</div>
-
-
-							<div class="stage-section-container">
-								<div class="header">Stage 2 presented by The Country of Georgia</div>
-								<div class="stage-section">
-
-									<div class="item">
-										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
-										<div class="title">Gaelic Storm</div>
-										<div class="description">@ 69:420 presented by whoever</div>
-									</div>
-
-									<div class="item">
-										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
-										<div class="title">Gaelic Storm</div>
-										<div class="description">@ 69:420 presented by whoever</div>
-									</div>
-
-									<div class="item">
-										<img class="image" height="128" src="assets/images/gaelicstorm.jpg">
-										<div class="title">Gaelic Storm</div>
-										<div class="description">@ 69:420 presented by whoever</div>
-									</div>
-
-								</div>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="container"></div>
 		</div>
 
 		<!-- <div class="section">TICKETS SECTION</div> -->
