--- a/examples/josh/index.html
+++ b/examples/josh/index.html
@@ -8,20 +8,26 @@
 	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 	<script src='main.js'></script>
 	
-	<title>i just</title>
+	<title>hi josh</title>
 </head>
 
 
 <body>
 	<div class="container">
+		<div class="menu-container">
+			<div class="menu-button">HOME</div>
+		</div>
+		
 		<div class="slide-container">
 			<div class="slide">
-				<div class="item"></div>
-				<div class="item"></div>
-				<div class="item"></div>
-				<div class="item"></div>
+				<div class="item"><img src="" alt="boner"></div>
+				<div class="item"><img src="" alt="boner"></div>
+				<div class="item"><img src="" alt="boner"></div>
+				<div class="item"><img src="" alt="boner"></div>
 			</div>
 		</div>
+
+		<div class="end-bar">
 	</div>
 </body>
 </html>
