--- a/examples/josh/index.html
+++ b/examples/josh/index.html
@@ -20,10 +20,10 @@
 		
 		<div class="slide-container">
 			<div class="slide">
-				<div class="item"><img src="" alt="boner"></div>
-				<div class="item"><img src="" alt="boner"></div>
-				<div class="item"><img src="" alt="boner"></div>
-				<div class="item"><img src="" alt="boner"></div>
+				<div class="item"><img src="/assets/img/uZDuO3g.jpg" alt="boner"></div>
+				<div class="item"><img src="/assets/img/pwyrwnb.jpg" alt="boner"></div>
+				<div class="item"><img src="/assets/img/U3wV2bt.jpg" alt="boner"></div>
+				<div class="item"><img src="/assets/img/1giGJK6.jpg" alt="boner"></div>
 			</div>
 		</div>
 
