--- a/examples/josh/index.html
+++ b/examples/josh/index.html
@@ -6,7 +6,7 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 
 	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-	<script src='main.js'></script>
+	<!-- <script src='main.js'></script> -->
 	
 	<title>hi josh</title>
 </head>
@@ -20,10 +20,10 @@
 		
 		<div class="slide-container">
 			<div class="slide">
-				<div class="item"><img src="/assets/img/uZDuO3g.jpg" alt="boner"></div>
-				<div class="item"><img src="/assets/img/pwyrwnb.jpg" alt="boner"></div>
-				<div class="item"><img src="/assets/img/U3wV2bt.jpg" alt="boner"></div>
-				<div class="item"><img src="/assets/img/1giGJK6.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/uZDuO3g.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/pwyrwnb.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/U3wV2bt.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/1giGJK6.jpg" alt="boner"></div>
 			</div>
 		</div>
 
