--- a/examples/josh/index.html
+++ b/examples/josh/index.html
@@ -4,9 +4,7 @@
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-
 	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-	<!-- <script src='main.js'></script> -->
 	
 	<title>hi josh</title>
 </head>
@@ -16,6 +14,7 @@
 	<div class="container">
 		<div class="menu-container">
 			<div class="menu-button">HOME</div>
+			boner
 		</div>
 		
 		<div class="slide-container">
@@ -29,5 +28,9 @@
 
 		<div class="end-bar">
 	</div>
+
+
+	<!-- <script src="assets/scripts/jquery-3.5.1.min.js"></script> -->
+	<script src='assets/scripts/main.js'></script>
 </body>
 </html>
