--- a/examples/josh/index.html
+++ b/examples/josh/index.html
@@ -23,6 +23,10 @@
 				<div class="item"><img src="assets/img/pwyrwnb.jpg" alt="boner"></div>
 				<div class="item"><img src="assets/img/U3wV2bt.jpg" alt="boner"></div>
 				<div class="item"><img src="assets/img/1giGJK6.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/uZDuO3g.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/pwyrwnb.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/U3wV2bt.jpg" alt="boner"></div>
+				<div class="item"><img src="assets/img/1giGJK6.jpg" alt="boner"></div>
 			</div>
 		</div>
 
@@ -31,6 +35,7 @@
 
 
 	<!-- <script src="assets/scripts/jquery-3.5.1.min.js"></script> -->
+	<script src='assets/scripts/anime.min.js'></script>
 	<script src='assets/scripts/main.js'></script>
 </body>
 </html>
