Main landing page is now under construction

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 </head>
 
 <body>
-	<div class="main">
-		hi
+	<div class="wrapper">
+		<div class="main">
+			<img src="assets/img/underconstruction.gif"
+		</div>
 	</div>
 </body>
 </html>
