--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div class="wrapper">
 		<div class="main">
-			<img src="assets/img/underconstruction.gif"
+			<img src="assets/img/underconstruction.gif">
 		</div>
 	</div>
 </body>
