--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
 	<title>mjex</title>
 
 	<link rel="stylesheet" href="main.css">
+
+	<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+	<script type="importmap">
+	  {
+		"imports": {
+		  "three": "https://unpkg.com/three@0.155.0/build/three.module.js",
+		  "three/addons/": "https://unpkg.com/three@0.155.0/examples/jsm/"
+		}
+	  }
+	</script>
 </head>
 
 <body>
-	<div class="wrapper">
-		<div class="main">
-			<img src="assets/img/underconstruction.gif">
-		</div>
-	</div>
+	<script src="scripts/perlin.js"></script>
+	<script type="module" src="scripts/main.js"></script>
 </body>
 </html>
