--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 	<script src="scripts/perlin.js"></script>
 	<script type="module" src="scripts/main.js"></script>
 </body>
