--- a/apps/landing2023/index.html
+++ b/apps/landing2023/index.html
@@ -17,23 +17,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>mjex</title>
 
-	<link rel="stylesheet" href="./main.css">
+	<link rel="stylesheet" href="main.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&family=Fontdiner+Swanky&display=swap" rel="stylesheet">
+
+	<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+	<script type="importmap">
+	  {
+		"imports": {
+		  "three": "https://unpkg.com/three@0.155.0/build/three.module.js",
+		  "three/addons/": "https://unpkg.com/three@0.155.0/examples/jsm/"
+		}
+	  }
+	</script>
 </head>
 
 <body>
-	<div id="nojs">
-		<div class="wrapper">
-			<div class="main">
-				<div class="header">
-					<div class="title">mjexart</div>
-					<div class="subtitle">maximillian lessard</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+	<script src="scripts/perlin.js"></script>
+	<script type="module" src="scripts/main.js"></script>
 </body>
 </html>
