--- a/index.html
+++ b/index.html
@@ -14,30 +14,76 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#000000">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>mjex</title>
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<title>mjexart - Max Lessard</title>
 
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="assets/scripts/photoswipe/photoswipe.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
+	
+	<!-- <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script> -->
 
-	<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
-	<script type="importmap">
+	<!-- <script type="importmap">
 	  {
 		"imports": {
 		  "three": "https://unpkg.com/three@0.155.0/build/three.module.js",
 		  "three/addons/": "https://unpkg.com/three@0.155.0/examples/jsm/"
 		}
 	  }
-	</script>
+	</script> -->
 </head>
 
 <body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-	<script src="scripts/perlin.js"></script>
-	<script type="module" src="scripts/main.js"></script>
+	<div id="signature">
+		<div class="signaturelogo"><a href="javascript:toggleNav()"></a></div>
+	</div>
+
+	<div id="nav-container">
+		<div class="logo">
+			<div class="textlogo"><a href="#"></a></div>
+		</div>
+
+		<div class="nav">
+			<div class="item"><div class="link"><a href="//mjexart.darkroom.com/" rel="noopener" target="_blank">prints⬈</a></div></div>
+			<div class="item"><div class="link"><a href="#photos">photos</a></div></div>
+			<div class="item"><div class="link"><a href="#videos">videos</a></div></div>
+			<div class="item"><div class="link"><a href="#about">about</a></div></div>
+			<div class="item"><div class="link"><a href="#contact">contact</a></div></div>
+			<div class="itemicon"><div class="youtube"><a href="//youtube.com/@mjexart" rel="noopener" target="_blank"></a></div></div>
+			<div class="itemicon"><div class="instagram"><a href="//instagram.com/mjexart" rel="noopener" target="_blank"></a></div></div>
+		</div>
+	</div>
+
+	<div id="wrapper">
+		<div class="main">
+			<div class="display">
+				<div id="content"></div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- <script src="https://web3forms.com/client/script.js" async defer></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
+	<!-- <script src="assets/scripts/perlin.js"></script> -->
+	<script type="text/javascript" src="assets/scripts/imagedb.js"></script>
+	<script type="module" src="assets/scripts/main.js"></script>
+
+	<script>
+		let navShown = false;
+
+		function toggleNav(set) {
+			if(set !== undefined) navShown = set;
+			else navShown = !navShown;
+			
+			// document.getElementById('wrapper').style.marginLeft = navShown ? '25px' : '0px';
+			document.getElementById('nav-container').style.left = navShown ? '0px' : '-50px';
+		}
+
+		// toggleNav();
+	</script>
 </body>
 </html>
