Edited about page and added a tap here svg

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,3 +1,3 @@
 <div id="about">
-	Hi I'm Max Lessard and I make a lot of things.
+	<!-- My name is Max Lessard and I've been extremely passionate about visual arts for as long as I can remember. -->
 </div>
