Added a tap here thing

--- a/assets/html/photos.html
+++ b/assets/html/photos.html
@@ -1,16 +1,16 @@
 <div id="photos">
 	<a href="#photos-street">
-		Street Photography
+		Street Photography Gallery
 		<div class="preview-image" category="street"></div>
 	</a>
 
 	<a href="#photos-landscape">
-		Landscape Photography
+		Landscape Photography Gallery
 		<div class="preview-image" category="landscape"></div>
 	</a>
 
 	<a href="#photos-portrait">
-		Portrait Photography
+		Portrait Photography Gallery
 		<div class="preview-image" category="portrait"></div>
 	</a>
 </div>
