--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -1,8 +1,12 @@
 <div id="home">
-	<div class="center">
-		<a id="landingimg" href="#">
-			<img src="https://iili.io/dTQqO6Q.jpg">
-		</a>
+	<div class="center-container">
+		<div class="center">
+			<a id="landingimg" href="#">
+				<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/cCj9TQYST24?si=HRzDOBVYPrWMf2vP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+				<img src="https://iili.io/dTQqO6Q.jpg">
+				<!-- <div class="caption"></div> -->
+			</a>
+		</div>
 	</div>
 	<!-- <img src="https://iili.io/dT6Vpea.jpg"> -->
 	<!-- <img src="https://iili.io/JW2k1z7.jpg"> -->
