--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 			else navShown = !navShown;
 			
 			// document.getElementById('wrapper').style.marginLeft = navShown ? '25px' : '0px';
-			document.getElementById('nav-container').style.left = navShown ? '0px' : '-50px';
+			document.querySelector('#content').style.transform = navShown ? 'translateX(24px)' : 'translateX(0px)';
+			document.getElementById('nav-container').style.left = navShown ? '0px' : '-35px';
 
 			if(set == undefined) {
 				if(Cookies.get('navHint') == 1) Cookies.set('navHint', 2);
