--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,3 +1,5 @@
 <div id="about">
-	<!-- My name is Max Lessard and I've been extremely passionate about visual arts for as long as I can remember. -->
+	My name is Max Lessard and I've been extremely passionate about visual arts for as long as I can remember.<br>
+	I love the process of bringing a project to life and my favorite mediums are photo and video. I've worked with<br>
+	other forms of media such as music, sound design, video game design, web design, painting and drawing.
 </div>
