Updated about me page

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,5 +1,12 @@
 <div id="about">
-	My name is Max Lessard and I've been extremely passionate about visual arts for as long as I can remember.<br>
-	I love the process of bringing a project to life and my favorite mediums are photo and video. I've worked with<br>
-	other forms of media such as music, sound design, video game design, web design, painting and drawing.
+	<div class="about-me">
+		<div class="header">
+			My name is Max Lessard and I've been extremely passionate about visual arts for as long as I can remember.<br>
+			I love the process of bringing a project to life and my favorite mediums are photo and video. I've worked with<br>
+			other forms of media such as music, sound design, video game design, web design, painting and drawing.
+		</div>
+		<div class="about-image">
+			<img src="assets/img/portrait/_A7R0481.jpg">
+		</div>
+	</div>
 </div>
