--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -2,8 +2,8 @@
 	<div class="center-container">
 		<div class="center">
 			<a id="landingimg" href="#">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/cCj9TQYST24?si=HRzDOBVYPrWMf2vP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				<!-- <div><img class="img" loading="lazy"></div> -->
+				<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/cCj9TQYST24?si=HRzDOBVYPrWMf2vP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+				<div><img class="img" loading="lazy"></div>
 				<!-- <div class="caption">hi</div> -->
 			</a>
 		</div>
