Added event photography section and updated about me page

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,13 +1,50 @@
 <div id="about">
-	<div class="about-me">
-		<div class="header">
-			My name is Max Lessard and I've been extremely passionate about visual arts for as long as I can remember.<br>
-			I love the process of bringing a project to life and my favorite mediums are photo and video. I've worked with<br>
-			other forms of media such as music, sound design, video game design, web design, painting and drawing.
+	<div class="container">
+		<div class="about-me">
+			<div class="header">
+				My name is Max Lessard and I make art with cameras. My primary focus is cinematography, lighting and sound design because I enjoy telling stories through films and I believe those three things are the most important components of getting a story told in the most engaging way.<br>
+				<br>
+				Beyond video I also have a passion for the art of photography and always have a good quality camera within arms reach because the right moment could be any time.
+			</div>
+			
+			<div class="about-image">
+				<img src="assets/img/portrait/_A7R0481.jpg">
+			</div>
+		</div>
+
+		<br>
+
+		<div>
+			Beyond personal interests however what I enjoy the most is helping bring other people's visions to life with my wide range of skills I've developed over years of trial and error.
+			
+			I'm able to help with the following:
+
+			<ul>
+				<li>Cinematography / DoP</li>
+				<li>1st / 2nd Assistant Camera</li>
+				<li>Lighting / gaffer / grip</li>
+				<li>Video editing</li>
+				<li>Color grading</li>
+				<li>Motion graphics / VFX / compositing</li>
+				<li>Sound design</li>
+				<li>Location sound recording</li>
+				<li>Portrait / event photography</li>
+				<li>Behind the scenes footage</li>
+				<li>Graphic design</li>
+				<li>Web design</li>
+			</ul>
+
+			I pride myself on my ability to find more efficient workflows and solve problems quickly. If you're ever in need of my help or services <a href="#contact">feel free to contact me</a>!
 		</div>
 		
-		<div class="about-image">
-			<img src="assets/img/portrait/_A7R0481.jpg">
+		<br>
+	
+		<div class="previous-websites">
+			Past websites and iterations:<br>
+			<a href="/apps/landing2018/" rel="noopener" target="_blank">2018 Website</a><br>
+			<a href="/apps/landing2019/" rel="noopener" target="_blank">2019 Website</a><br>
+			<a href="/apps/landing2023/" rel="noopener" target="_blank">2023 Website</a><br>
+			<a href="/apps/landing2023/" rel="noopener" target="_blank">Hyperverse</a><br>
 		</div>
 	</div>
 </div>
