--- a/assets/html/photos.html
+++ b/assets/html/photos.html
@@ -1,16 +1,23 @@
 <div id="photos">
+	<h3>Galleries</h3>
+
 	<a href="#photos-street">
-		Street Photography Gallery
+		Street Photography
 		<div class="preview-image" category="street"></div>
 	</a>
 
 	<a href="#photos-landscape">
-		Landscape Photography Gallery
+		Landscape Photography
 		<div class="preview-image" category="landscape"></div>
 	</a>
 
+	<a href="#photos-event">
+		Event Photography
+		<div class="preview-image" category="event"></div>
+	</a>
+
 	<a href="#photos-portrait">
-		Portrait Photography Gallery
+		Portrait Photography
 		<div class="preview-image" category="portrait"></div>
 	</a>
 </div>
