Edited about page

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -14,7 +14,7 @@
 
 		<br>
 
-		<div>
+		<!-- <div>
 			Beyond personal interests however what I enjoy the most is helping bring other people's visions to life with my wide range of skills I've developed over years of trial and error.
 			
 			I'm able to help with the following:
@@ -35,7 +35,7 @@
 			</ul>
 
 			I pride myself on my ability to find more efficient workflows and solve problems quickly. If you're ever in need of my help or services <a href="#contact">feel free to contact me</a>!
-		</div>
+		</div> -->
 		
 		<br>
 	
