Removed the knife sharpening video from the videos page

--- a/assets/html/videos.html
+++ b/assets/html/videos.html
@@ -1,7 +1,7 @@
 <div id="videos">
 	<a href="//youtube.com/@mjexart">Short Films</a>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/RE_eXyem3uo" title="I was obsessed with knife sharpening" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/RE_eXyem3uo" title="I was obsessed with knife sharpening" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/cCj9TQYST24?si=HRzDOBVYPrWMf2vP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
