Added a link to the ODDWARP site with the logo

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 	</div>
 
 	<div id="nav-container">
-		<div class="logo">
-			<div class="textlogo"><a href="#"></a></div>
-		</div>
-
+		<div class="logo"><div class="textlogo"><a href="#"></a></div></div>
+		
+		<div class="logo"><div class="oddwarplogo"><a href="//oddwarp.com/" rel="noopener" target="_blank"></a></div></div>
+		
 		<div class="nav">
 			<div class="item"><div class="link"><a href="//mjexart.darkroom.com/" rel="noopener" target="_blank">prints⬈</a></div></div>
 			<div class="item"><div class="link"><a href="#photos">photos</a></div></div>
-			<div class="item"><div class="link"><a href="#videos">videos</a></div></div>
+			<!-- <div class="item"><div class="link"><a href="#videos">videos</a></div></div> -->
 			<div class="item"><div class="link"><a href="#about">about</a></div></div>
 			<div class="item"><div class="link"><a href="#contact">contact</a></div></div>
 			<div class="item"><div class="link dark"><a href="//youtube.com/@mjexart" rel="noopener" target="_blank">youtube</a></div></div>
@@ -58,6 +58,7 @@
 			<!-- <div class="itemicon"><div class="youtube"><a href="//youtube.com/@mjexart" rel="noopener" target="_blank"></a></div></div> -->
 			<!-- <div class="itemicon"><div class="instagram"><a href="//instagram.com/mjexart" rel="noopener" target="_blank"></a></div></div> -->
 		</div>
+
 	</div>
 
 	<div id="wrapper">
